begin 2 big reworks. no oop for map worlds, virtual threads